[gd_scene load_steps=3 format=2]

[ext_resource path="res://DriverOoO.gd" type="Script" id=1]
[ext_resource path="res://Light.tres" type="Theme" id=2]

[node name="DriverOoO" type="Node2D"]
script = ExtResource( 1 )
rob_size = 26
iq_size = 12
lsu_delay = 4

[node name="CodeEdit" type="TextEdit" parent="."]
margin_left = 1528.0
margin_top = 8.0
margin_right = 1912.0
margin_bottom = 480.0
theme = ExtResource( 2 )
text = "ld x1 x0
ad x2 x1 x1
ad x6 x5 x5
ad x3 x2 x2
ad x7 x6 x6
ad x8 x7 x7
ad x9 x8 x8
ad x10 x9 x9
ad x11 x10 x10
ad x12 x11 x11
ld x5 x12
ad x0 x3 x3"
syntax_highlighting = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DriverButton" type="Button" parent="."]
margin_left = 1568.0
margin_top = 528.0
margin_right = 1705.0
margin_bottom = 584.0
theme = ExtResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TickButton" type="Button" parent="."]
margin_left = 1744.0
margin_top = 528.0
margin_right = 1872.0
margin_bottom = 584.0
theme = ExtResource( 2 )
text = "Tick"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeadIndicator" type="ColorRect" parent="."]
margin_left = 720.0
margin_top = 488.0
margin_right = 752.0
margin_bottom = 520.0
color = Color( 0.647059, 0.054902, 0.054902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TailIndicator" type="ColorRect" parent="."]
margin_left = 800.0
margin_top = 440.0
margin_right = 832.0
margin_bottom = 472.0
color = Color( 0.101961, 0.176471, 0.482353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="ToggleButton" type="Button" parent="."]
margin_left = 1656.0
margin_top = 616.0
margin_right = 1800.0
margin_bottom = 672.0
theme = ExtResource( 2 )
text = "Toggle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPCLabel" type="Label" parent="."]
margin_left = 1656.0
margin_top = 696.0
margin_right = 1776.0
margin_bottom = 736.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="DriverButton" to="." method="_on_DriverButton_pressed"]
[connection signal="pressed" from="TickButton" to="." method="tick"]
[connection signal="timeout" from="Timer" to="." method="tick"]
[connection signal="pressed" from="ToggleButton" to="." method="_on_ToggleButton_pressed"]
